--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
-      "eslint --fix"
+      "eslint --fix",
+      "git add"
     ],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
